--- a/views/crown2_12/index.ejs
+++ b/views/crown2_12/index.ejs
@@ -42,7 +42,7 @@
 
   <div class="homepage">
     <div>
-      <h3> <%= name %> <%= title %> </h3>
+      <h3> <%= title %> <%= id %> </h3>
     </div>
     <div class="directory-menu">
       <div class="menu-item">
