--- a/views/crown2_12/jackets.ejs
+++ b/views/crown2_12/jackets.ejs
@@ -37,49 +37,16 @@
   </div>
 
   <div class="shop-page">
-    <div class="collection-page">
-      <h1 class="title">Jackets</h1>
-      <div class="items">
-         <div class="collection-item">
-           <img class="image" src="https://i.ibb.co/XzcwL5s/black-shearling.png" />
-           <div class="collection-footer">
-             <span class="name">Black Jean Shearling</span>
-             <span class="price">125</span>
-           </div>
-           <button class="custom-button">Add to Cart</button>
-         </div>
-         <div class="collection-item">
-          <img class="image" src="https://i.ibb.co/mJS6vz0/blue-jean-jacket.png" />
-          <div class="collection-footer">
-            <span class="name">Blue Jean Jacket</span>
-            <span class="price">90</span>
+        <%  for(let i=0; i<data.length; i++) { %>
+          <div class="collection-item">
+            <img class="image" src="<%= data[i].local_url %>" />
+            <div class="collection-footer">
+              <span class="name"><%= data[i].name %></span>
+              <span class="price"><%= data[i].prize %></span>
+            </div>
+            <button class="custom-button">Add to Cart</button>
           </div>
-          <button class="custom-button">Add to Card</button>
-        </div>
-        <div class="collection-item">
-          <img class="image" src="https://i.ibb.co/N71k1ML/grey-jean-jacket.png" />
-          <div class="collection-footer">
-            <span class="name">Grey Jean Jacket</span>
-            <span class="price">90</span>
-          </div>
-          <button class="custom-button">Add to Cart</button>
-        </div>
-        <div class="collection-item">
-          <img class="image" src="https://i.ibb.co/s96FpdP/brown-shearling.png" />
-          <div class="collection-footer">
-            <span class="name">Brown Shearling</span>
-            <span class="price">165</span>
-          </div>
-          <button class="custom-button">Add to Cart</button>
-        </div>
-        <div class="collection-item">
-          <img class="image" src="https://i.ibb.co/M6hHc3F/brown-trench.png" />
-          <div class="collection-footer">
-            <span class="name">Tan Trench</span>
-            <span class="price">185</span>
-          </div>
-          <button class="custom-button">Add to Cart</button>
-        </div>
+        <%  } %>
       </div>
     </div>
   </div>
