--- a/views/crown2_12/jackets.ejs
+++ b/views/crown2_12/jackets.ejs
@@ -4,19 +4,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Crown Clothing</title>
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
   <div class="header">
     <a href="/" class="logo-container">
-      <img src='./assets/crown.svg' />
+      <img src='/assets/crown.svg' />
     </a>
     <div class="options">
       <a href="./overview.html" class="option">Shop</a>
       <a href="/shop" class="option">Contact</a>
       <a href="/signin" class="option">Sign In</a>
       <div class="cart-icon" onclick="cartToggle()">
-        <img class="shopping-icon" src="./assets/shopping-bag.svg" alt="">
+        <img class="shopping-icon" src="/assets/shopping-bag.svg" alt="">
       </div>
       <div class="cart-dropdown">
         <div class="cart-items">
@@ -37,6 +37,9 @@
   </div>
 
   <div class="shop-page">
+    <div class="collection-page">
+      <h1 class="title">Jackets</h1>
+      <div class="items">
         <%  for(let i=0; i<data.length; i++) { %>
           <div class="collection-item">
             <img class="image" src="<%= data[i].local_url %>" />
@@ -48,7 +51,7 @@
           </div>
         <%  } %>
       </div>
-    </div>
+    </div>  
   </div>
 
   <script>
