--- a/views/crown2_12/jackets.ejs
+++ b/views/crown2_12/jackets.ejs
@@ -40,7 +40,7 @@
     <div class="collection-page">
       <h1 class="title">Jackets</h1>
       <div class="items">
-        <%  for(let i=0; i<data.length; i++) { %>
+        <%  for(let i=0; i<6; i++) { %>
           <div class="collection-item">
             <img class="image" src="<%= data[i].local_url %>" />
             <div class="collection-footer">
